[package]
name = "uniclip"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
axum = "0.8.1"
bincode = "1.3.3"
env_logger = "0.11.6"
get_if_addrs = "0.5.3"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.26"
reqwest = { version = "0.12.12",  features = ["json"] }
serde = { version = "1.0.218",  features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"]}
